packages/graphlib-dot/lib/dot-grammar.ts
// @ts-nocheck

// Generated by peggy v. 1.2.0 (ts-pegjs plugin v. 1.2.1 )
//
// https://peggyjs.org/   https://github.com/metadevpro/ts-pegjs

"use strict";

export interface IFilePosition {
  offset: number;
  line: number;
  column: number;
}

export interface IFileRange {
  start: IFilePosition;
  end: IFilePosition;
  source: string;
}

export interface ILiteralExpectation {
  type: "literal";
  text: string;
  ignoreCase: boolean;
}

export interface IClassParts extends Array<string | IClassParts> {}

export interface IClassExpectation {
  type: "class";
  parts: IClassParts;
  inverted: boolean;
  ignoreCase: boolean;
}

export interface IAnyExpectation {
  type: "any";
}

export interface IEndExpectation {
  type: "end";
}

export interface IOtherExpectation {
  type: "other";
  description: string;
}

export type Expectation = ILiteralExpectation | IClassExpectation | IAnyExpectation | IEndExpectation | IOtherExpectation;

function peg$padEnd(str: string, targetLength: number, padString: string) {
  padString = padString || ' ';
  if (str.length > targetLength) {
    return str;
  }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

export class SyntaxError extends Error {
  public static buildMessage(expected: Expectation[], found: string | null) {
    function hex(ch: string): string {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function classEscape(s: string): string {
      return s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,            (ch) => "\\x0" + hex(ch) )
        .replace(/[\x10-\x1F\x7F-\x9F]/g, (ch) => "\\x"  + hex(ch) );
    }

    function describeExpectation(expectation: Expectation) {
      switch (expectation.type) {
        case "literal":
          return "\"" + literalEscape(expectation.text) + "\"";
        case "class":
          const escapedParts = expectation.parts.map((part) => {
            return Array.isArray(part)
              ? classEscape(part[0] as string) + "-" + classEscape(part[1] as string)
              : classEscape(part);
          });

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        case "any":
          return "any character";
        case "end":
          return "end of input";
        case "other":
          return expectation.description;
      }
    }

    function describeExpected(expected1: Expectation[]) {
      const descriptions = expected1.map(describeExpectation);
      let i: number;
      let j: number;

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found1: string | null) {
      return found1 ? "\"" + literalEscape(found1) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }

  public message: string;
  public expected: Expectation[];
  public found: string | null;
  public location: IFileRange;
  public name: string;

  constructor(message: string, expected: Expectation[], found: string | null, location: IFileRange) {
    super();
    this.message = message;
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";

    if (typeof (Object as any).setPrototypeOf === "function") {
      (Object as any).setPrototypeOf(this, SyntaxError.prototype);
    } else {
      (this as any).__proto__ = SyntaxError.prototype;
    }
    if (typeof (Error as any).captureStackTrace === "function") {
      (Error as any).captureStackTrace(this, SyntaxError);
    }
  }

  format(sources: { source: string; text: string }[]): string {
    let str = 'Error: ' + this.message;
    if (this.location) {
      let src: string[] | null = null;
      let k;
      for (k = 0; k < sources.length; k++) {
        if (sources[k].source === this.location.source) {
          src = sources[k].text.split(/\r\n|\n|\r/g);
          break;
        }
      }
      let s = this.location.start;
      let loc = this.location.source + ':' + s.line + ':' + s.column;
      if (src) {
        let e = this.location.end;
        let filler = peg$padEnd('', s.line.toString().length, ' ');
        let line = src[s.line - 1];
        let last = s.line === e.line ? e.column : line.length + 1;
        str += '\n --> ' + loc + '\n' + filler + ' |\n' + s.line + ' | ' + line + '\n' + filler + ' | ' +
          peg$padEnd('', s.column - 1, ' ') +
          peg$padEnd('', last - s.column, '^');
      } else {
        str += '\n at ' + loc;
      }
    }
    return str;
  }
}

function peg$parse(input: string, options?: IParseOptions) {
  options = options !== undefined ? options : {};

  const peg$FAILED: Readonly<any> = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions: {[id: string]: any} = { start: peg$parsestart, graphStmt: peg$parsegraphStmt };
  let peg$startRuleFunction: () => any = peg$parsestart;

  const peg$c0 = "{";
  const peg$c1 = peg$literalExpectation("{", false);
  const peg$c2 = "}";
  const peg$c3 = peg$literalExpectation("}", false);
  const peg$c4 = function(strict: any, type: any, id: any, stmts: any): any {
        return {type: type, id: id, strict: strict !== null, stmts: stmts};
      };
  const peg$c5 = ";";
  const peg$c6 = peg$literalExpectation(";", false);
  const peg$c7 = function(first: any, rest: any): any {
        var result = [first];
        for (var i = 0; i < rest.length; ++i) {
          result.push(rest[i][1]);
        }
        return result;
      };
  const peg$c8 = function(type: any, attrs: any): any {
        return { type: "attr", attrType: type, attrs: attrs || {}};
      };
  const peg$c9 = "=";
  const peg$c10 = peg$literalExpectation("=", false);
  const peg$c11 = function(k: any, v: any): any {
        var attrs = {};
        attrs[k] = v;
        return { type: "inlineAttr", attrs: attrs };
      };
  const peg$c12 = function(id: any, attrs: any): any { return {type: "node", id: id, attrs: attrs || {}}; };
  const peg$c13 = function(lhs: any, rhs: any, attrs: any): any {
        var elems = [lhs];
        for (var i = 0; i < rhs.length; ++i) {
          elems.push(rhs[i]);
        }
        return { type: "edge", elems: elems, attrs: attrs || {} };
      };
  const peg$c14 = function(id: any, stmts: any): any {
        id = (id && id[2]) || [];
        return { type: "subgraph", id: id[0], stmts: stmts };
      };
  const peg$c15 = function(first: any, rest: any): any {
        var result = first;
        for (var i = 0; i < rest.length; ++i) {
          _.merge(result, rest[i][1]);
        }
        return result;
      };
  const peg$c16 = "[";
  const peg$c17 = peg$literalExpectation("[", false);
  const peg$c18 = "]";
  const peg$c19 = peg$literalExpectation("]", false);
  const peg$c20 = function(aList: any): any { return aList; };
  const peg$c21 = ",";
  const peg$c22 = peg$literalExpectation(",", false);
  const peg$c23 = function(first: any, rest: any): any {
        var result = first;
        for (var i = 0; i < rest.length; ++i) {
          _.merge(result, rest[i][3]);
        }
        return result;
      };
  const peg$c24 = "--";
  const peg$c25 = peg$literalExpectation("--", false);
  const peg$c26 = function(): any { return directed; };
  const peg$c27 = "->";
  const peg$c28 = peg$literalExpectation("->", false);
  const peg$c29 = function(rhs: any, rest: any): any {
        var result = [rhs];
        if (rest) {
          for (var i = 0; i < rest.length; ++i) {
            result.push(rest[i]);
          }
        }
        return result;
      };
  const peg$c30 = function(k: any, v: any): any {
        var result = {};
        result[k] = v[3];
        return result;
      };
  const peg$c31 = function(id: any): any { return { type: "node", id: id, attrs: {} }; };
  const peg$c32 = function(id: any): any { return id; };
  const peg$c33 = ":";
  const peg$c34 = peg$literalExpectation(":", false);
  const peg$c35 = "ne";
  const peg$c36 = peg$literalExpectation("ne", false);
  const peg$c37 = "se";
  const peg$c38 = peg$literalExpectation("se", false);
  const peg$c39 = "sw";
  const peg$c40 = peg$literalExpectation("sw", false);
  const peg$c41 = "nw";
  const peg$c42 = peg$literalExpectation("nw", false);
  const peg$c43 = "n";
  const peg$c44 = peg$literalExpectation("n", false);
  const peg$c45 = "e";
  const peg$c46 = peg$literalExpectation("e", false);
  const peg$c47 = "s";
  const peg$c48 = peg$literalExpectation("s", false);
  const peg$c49 = "w";
  const peg$c50 = peg$literalExpectation("w", false);
  const peg$c51 = "c";
  const peg$c52 = peg$literalExpectation("c", false);
  const peg$c53 = "_";
  const peg$c54 = peg$literalExpectation("_", false);
  const peg$c55 = peg$otherExpectation("identifier");
  const peg$c56 = /^[a-zA-Z\u0200-\u0377_]/;
  const peg$c57 = peg$classExpectation([["a", "z"], ["A", "Z"], ["\u0200", "\u0377"], "_"], false, false);
  const peg$c58 = /^[a-zA-Z\u0200-\u0377_0-9]/;
  const peg$c59 = peg$classExpectation([["a", "z"], ["A", "Z"], ["\u0200", "\u0377"], "_", ["0", "9"]], false, false);
  const peg$c60 = function(fst: any, rest: any): any { return fst + rest.join(""); };
  const peg$c61 = "-";
  const peg$c62 = peg$literalExpectation("-", false);
  const peg$c63 = ".";
  const peg$c64 = peg$literalExpectation(".", false);
  const peg$c65 = /^[0-9]/;
  const peg$c66 = peg$classExpectation([["0", "9"]], false, false);
  const peg$c67 = function(sign: any, dot: any, after: any): any {
        return (sign || "") + dot + after.join("");
      };
  const peg$c68 = function(sign: any, before: any, after: any): any {
        return (sign || "") + before.join("") + (after ? after[0] : "") + (after ? after[1].join("") : "");
      };
  const peg$c69 = "\"";
  const peg$c70 = peg$literalExpectation("\"", false);
  const peg$c71 = "\\\"";
  const peg$c72 = peg$literalExpectation("\\\"", false);
  const peg$c73 = function(): any { return '"'; };
  const peg$c74 = "\\";
  const peg$c75 = peg$literalExpectation("\\", false);
  const peg$c76 = /^[^"]/;
  const peg$c77 = peg$classExpectation(["\""], true, false);
  const peg$c78 = function(ch: any): any { return "\\" + ch; };
  const peg$c79 = function(id: any): any {
        return id.join("");
      };
  const peg$c80 = "node";
  const peg$c81 = peg$literalExpectation("node", true);
  const peg$c82 = function(k: any): any { return k.toLowerCase(); };
  const peg$c83 = "edge";
  const peg$c84 = peg$literalExpectation("edge", true);
  const peg$c85 = "graph";
  const peg$c86 = peg$literalExpectation("graph", true);
  const peg$c87 = "digraph";
  const peg$c88 = peg$literalExpectation("digraph", true);
  const peg$c89 = "subgraph";
  const peg$c90 = peg$literalExpectation("subgraph", true);
  const peg$c91 = "strict";
  const peg$c92 = peg$literalExpectation("strict", true);
  const peg$c93 = function(graph: any): any {
        directed = graph === "digraph";
        return graph;
      };
  const peg$c94 = peg$otherExpectation("whitespace");
  const peg$c95 = /^[ \t\r\n]/;
  const peg$c96 = peg$classExpectation([" ", "\t", "\r", "\n"], false, false);
  const peg$c97 = peg$otherExpectation("comment");
  const peg$c98 = "//";
  const peg$c99 = peg$literalExpectation("//", false);
  const peg$c100 = /^[^\n]/;
  const peg$c101 = peg$classExpectation(["\n"], true, false);
  const peg$c102 = "/*";
  const peg$c103 = peg$literalExpectation("/*", false);
  const peg$c104 = "*/";
  const peg$c105 = peg$literalExpectation("*/", false);
  const peg$c106 = peg$anyExpectation();

  let peg$currPos = 0;
  let peg$savedPos = 0;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = 0;
  let peg$maxFailExpected: Expectation[] = [];
  let peg$silentFails = 0;

  let peg$result;

  if (options.startRule !== undefined) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text(): string {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location(): IFileRange {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location1
    );
  }

  function error(message: string, location1?: IFileRange) {
    location1 = location1 !== undefined
      ? location1
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location1);
  }

  function peg$literalExpectation(text1: string, ignoreCase: boolean): ILiteralExpectation {
    return { type: "literal", text: text1, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts: IClassParts, inverted: boolean, ignoreCase: boolean): IClassExpectation {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation(): IAnyExpectation {
    return { type: "any" };
  }

  function peg$endExpectation(): IEndExpectation {
    return { type: "end" };
  }

  function peg$otherExpectation(description: string): IOtherExpectation {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos: number) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos: number, endPos: number): IFileRange {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected1: Expectation) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected1);
  }

  function peg$buildSimpleError(message: string, location1: IFileRange) {
    return new SyntaxError(message, [], "", location1);
  }

  function peg$buildStructuredError(expected1: Expectation[], found: string | null, location1: IFileRange) {
    return new SyntaxError(
      SyntaxError.buildMessage(expected1, found),
      expected1,
      found,
      location1
    );
  }

  function peg$parsestart(): any {
    let s0, s1;

    s0 = [];
    s1 = peg$parsegraphStmt();
    if (s1 as any !== peg$FAILED) {
      while (s1 as any !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parsegraphStmt();
      }
    } else {
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsegraphStmt(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parse_();
    while (s2 as any !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parse_();
    }
    if (s1 as any !== peg$FAILED) {
      s2 = peg$currPos;
      s3 = peg$parsestrict();
      if (s3 as any !== peg$FAILED) {
        s4 = peg$parse_();
        if (s4 as any !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 as any === peg$FAILED) {
        s2 = null;
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parsegraphType();
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          while (s5 as any !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseid();
            if (s5 as any === peg$FAILED) {
              s5 = null;
            }
            if (s5 as any !== peg$FAILED) {
              s6 = [];
              s7 = peg$parse_();
              while (s7 as any !== peg$FAILED) {
                s6.push(s7);
                s7 = peg$parse_();
              }
              if (s6 as any !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 123) {
                  s7 = peg$c0;
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c1); }
                }
                if (s7 as any !== peg$FAILED) {
                  s8 = [];
                  s9 = peg$parse_();
                  while (s9 as any !== peg$FAILED) {
                    s8.push(s9);
                    s9 = peg$parse_();
                  }
                  if (s8 as any !== peg$FAILED) {
                    s9 = peg$parsestmtList();
                    if (s9 as any === peg$FAILED) {
                      s9 = null;
                    }
                    if (s9 as any !== peg$FAILED) {
                      s10 = [];
                      s11 = peg$parse_();
                      while (s11 as any !== peg$FAILED) {
                        s10.push(s11);
                        s11 = peg$parse_();
                      }
                      if (s10 as any !== peg$FAILED) {
                        if (input.charCodeAt(peg$currPos) === 125) {
                          s11 = peg$c2;
                          peg$currPos++;
                        } else {
                          s11 = peg$FAILED;
                          if (peg$silentFails === 0) { peg$fail(peg$c3); }
                        }
                        if (s11 as any !== peg$FAILED) {
                          s12 = [];
                          s13 = peg$parse_();
                          while (s13 as any !== peg$FAILED) {
                            s12.push(s13);
                            s13 = peg$parse_();
                          }
                          if (s12 as any !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c4(s2, s3, s5, s9);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestmtList(): any {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9;

    s0 = peg$currPos;
    s1 = peg$parsestmt();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 as any !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 59) {
          s3 = peg$c5;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s3 as any === peg$FAILED) {
          s3 = null;
        }
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$currPos;
          s6 = [];
          s7 = peg$parse_();
          while (s7 as any !== peg$FAILED) {
            s6.push(s7);
            s7 = peg$parse_();
          }
          if (s6 as any !== peg$FAILED) {
            s7 = peg$parsestmt();
            if (s7 as any !== peg$FAILED) {
              s8 = [];
              s9 = peg$parse_();
              while (s9 as any !== peg$FAILED) {
                s8.push(s9);
                s9 = peg$parse_();
              }
              if (s8 as any !== peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 59) {
                  s9 = peg$c5;
                  peg$currPos++;
                } else {
                  s9 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c6); }
                }
                if (s9 as any === peg$FAILED) {
                  s9 = null;
                }
                if (s9 as any !== peg$FAILED) {
                  s6 = [s6, s7, s8, s9];
                  s5 = s6;
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          } else {
            peg$currPos = s5;
            s5 = peg$FAILED;
          }
          while (s5 as any !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$currPos;
            s6 = [];
            s7 = peg$parse_();
            while (s7 as any !== peg$FAILED) {
              s6.push(s7);
              s7 = peg$parse_();
            }
            if (s6 as any !== peg$FAILED) {
              s7 = peg$parsestmt();
              if (s7 as any !== peg$FAILED) {
                s8 = [];
                s9 = peg$parse_();
                while (s9 as any !== peg$FAILED) {
                  s8.push(s9);
                  s9 = peg$parse_();
                }
                if (s8 as any !== peg$FAILED) {
                  if (input.charCodeAt(peg$currPos) === 59) {
                    s9 = peg$c5;
                    peg$currPos++;
                  } else {
                    s9 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c6); }
                  }
                  if (s9 as any === peg$FAILED) {
                    s9 = null;
                  }
                  if (s9 as any !== peg$FAILED) {
                    s6 = [s6, s7, s8, s9];
                    s5 = s6;
                  } else {
                    peg$currPos = s5;
                    s5 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s5;
                  s5 = peg$FAILED;
                }
              } else {
                peg$currPos = s5;
                s5 = peg$FAILED;
              }
            } else {
              peg$currPos = s5;
              s5 = peg$FAILED;
            }
          }
          if (s4 as any !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c7(s1, s4);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsestmt(): any {
    let s0;

    s0 = peg$parseattrStmt();
    if (s0 as any === peg$FAILED) {
      s0 = peg$parseedgeStmt();
      if (s0 as any === peg$FAILED) {
        s0 = peg$parsesubgraphStmt();
        if (s0 as any === peg$FAILED) {
          s0 = peg$parseinlineAttrStmt();
          if (s0 as any === peg$FAILED) {
            s0 = peg$parsenodeStmt();
          }
        }
      }
    }

    return s0;
  }

  function peg$parseattrStmt(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsegraph();
    if (s1 as any === peg$FAILED) {
      s1 = peg$parsenode();
      if (s1 as any === peg$FAILED) {
        s1 = peg$parseedge();
      }
    }
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parseattrList();
        if (s3 as any !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinlineAttrStmt(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseid();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 as any !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c9;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          while (s5 as any !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseid();
            if (s5 as any !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c11(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsenodeStmt(): any {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parsenodeId();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parseattrList();
        if (s3 as any === peg$FAILED) {
          s3 = null;
        }
        if (s3 as any !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c12(s1, s3);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseedgeStmt(): any {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parsenodeIdOrSubgraph();
    if (s1 as any !== peg$FAILED) {
      s2 = [];
      s3 = peg$parse_();
      while (s3 as any !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 as any !== peg$FAILED) {
        s3 = peg$parseedgeRHS();
        if (s3 as any !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          while (s5 as any !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 as any !== peg$FAILED) {
            s5 = peg$parseattrList();
            if (s5 as any === peg$FAILED) {
              s5 = null;
            }
            if (s5 as any !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c13(s1, s3, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }
